2009-09-30  Lluis Sanchez Gual  <lluis@novell.com>

	* .temp-addin-registry: Remove temp dir.
