@@ -1,3 +1,11 @@
+2009-10-14  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* AssemblyInfo.cs:
+	* Manifest.addin.xml: Fixed description.
+
+	* MonoDevelop.Debugger.Soft.csproj: Patch into the extras
+	  configure system.
+
 2009-10-05  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* ArrayAdaptor.cs:
