@@ -1,3 +1,8 @@
+2009-10-14  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Makefile:
+	* configure: Patch into the extras configure system.
+
 2009-09-30  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* .temp-addin-registry: Remove temp dir.
